# quote_infra

./: .env  .gitignore  Cargo.toml  README.md
docker/: docker-compose.yml
quote_api/: Cargo.toml
quote_api/src/: main.rs
quote_api_collector/: Cargo.toml
quote_api_collector/src/: main.rs
quote_lib/: Cargo.toml
quote_lib/src/: config.rs  elastic.rs  lib.rs  logger.rs  quote_envelope.rs  redis_handler.rs
quote_sinker/: Cargo.toml
quote_sinker/src/: config.rs  main.rs
