[package]
name = "quote_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.21", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.28.1", features =["script", "tokio-comp", "aio", "connection-manager"]}
deadpool-redis = "0.18.0"
thiserror = "2.0.9"
chrono = { version = "0.4.39", features = ["serde"] }
once_cell = "1.20.2"
dotenv = "0.15.0"