[package]
name = "quote_sinker"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0.21", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json"] }  # Enable 'json' feature
rdkafka = "0.23"
fast_log = {version = "1.5"}
log = "0.4"
rand = "0.8"
quote_lib = { path = "../quote_lib" }  # Adjust the path as needed
chrono = { version = "0.4.39", features = ["serde"] }